[package]
name = "bitwarden_rs"
version = "1.0.0"
authors = ["Daniel García <dani-garcia@users.noreply.github.com>"]
edition = "2018"

repository = "https://github.com/dani-garcia/bitwarden_rs"
readme = "README.md"
license = "GPL-3.0-only"
publish = false
build = "build.rs"

[features]
# default = ["sqlite"]
# Empty to keep compatibility, prefer to set USE_SYSLOG=true
enable_syslog = []
mysql = ["diesel/mysql", "diesel_migrations/mysql"]
postgresql = ["diesel/postgres", "diesel_migrations/postgres"]
sqlite = ["diesel/sqlite", "diesel_migrations/sqlite", "libsqlite3-sys"]

[target."cfg(not(windows))".dependencies]
syslog = "4.0.1"

[dependencies]
# Web framework for nightly with a focus on ease-of-use, expressibility, and speed.
rocket = { version = "0.5.0-dev", features = ["tls"], default-features = false }
rocket_contrib = "0.5.0-dev"

# Async futures
futures = "0.3.1"
tokio = { version = "0.2.9", features = ["blocking", "fs", "io-util"] }

# HTTP client
reqwest = { version = "0.10.1", features = ["gzip", "json", "stream"] }
bytes = "0.5.3"

# multipart/form-data support
multipart = { version = "0.16.1", features = ["server"], default-features = false }

# WebSockets library
ws = "0.9.1"

# MessagePack library
rmpv = "0.4.3"

# Concurrent hashmap implementation
chashmap = "2.2.2"

# A generic serialization/deserialization framework
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"

# Logging
log = "0.4.8"
fern = { version = "0.5.9", features = ["syslog-4"] }

# A safe, extensible ORM and Query builder
diesel = { version = "1.4.3", features = [ "chrono", "r2d2"] }
diesel_migrations = "1.4.0"

# Bundled SQLite                                           
libsqlite3-sys = { version = "0.16.0", features = ["bundled"], optional = true }

# Crypto library
ring = "0.16.9"

# UUID generation
uuid = { version = "0.8.1", features = ["v4"] }

# Date and time library for Rust
chrono = "0.4.10"

# TOTP library
oath = "0.10.2"

# Data encoding library
data-encoding = "2.1.2"

# JWT library
jsonwebtoken = "7.0.0-alpha.2"

# U2F library
u2f = "0.2.0"

# Yubico Library
yubico = { version = "0.9.0", features = ["online-tokio"], default-features = false }

# A `dotenv` implementation for Rust
dotenv = { version = "0.15.0", default-features = false }

# Lazy static macro
lazy_static = "1.4.0"

# More derives
derive_more = "0.99.2"

# Numerical libraries
num-traits = "0.2.11"
num-derive = "0.3.0"

# Email libraries
lettre = "0.9.2"
lettre_email = "0.9.2"
native-tls = "0.2.3"
quoted_printable = "0.4.1"

# Template library
handlebars = "2.0.4"

# For favicon extraction from main website
soup = "0.4.1"
regex = "1.3.3"
data-url = "0.1.0"

# Used by U2F, JWT and Postgres
openssl = "0.10.26"

# URL encoding library
percent-encoding = "2.1.0"
ctrlc = "3.1.3"

[patch.crates-io]
# Use newest ring
rocket = { git = 'https://github.com/SergioBenitez/Rocket', rev = '30c83d5619b8d670fc5f2d499a1a2dbb6f0bc31b' }
rocket_contrib = { git = 'https://github.com/SergioBenitez/Rocket', rev = '30c83d5619b8d670fc5f2d499a1a2dbb6f0bc31b' }

# Use git version for timeout fix #706
lettre = { git = 'https://github.com/lettre/lettre', rev = '24d694db3be017d82b1cdc8bf9da601420b31bb0' }
lettre_email = { git = 'https://github.com/lettre/lettre', rev = '24d694db3be017d82b1cdc8bf9da601420b31bb0' }

# For favicon extraction from main website
data-url = { git = 'https://github.com/servo/rust-url', package="data-url", rev = '7f1bd6ce1c2fde599a757302a843a60e714c5f72' }
